# high-side-switch

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Contributing.md  LICENSE  Makefile  README.md  annotated.html  annotated_dup.js  classes.html  cmake_install.cmake  dir_1637b38f44cddc7958b383951b5bb6ac.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5752cadd8276ecfd63d9b924f2a4d4b5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7e83d1792d529f4aa7126ac7e0b3b699.html  dir_939c8b190bd538da7127929d9efbf093.html  dir_b85deeec3e940e8ec5637c145ef17ca4.html  dir_b8666f76be275fff94c10ba3c22951a9.html  dir_cd07787cd715514b4f8f94ee4f39b60a.html  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  (+64 more)
.github/workflows/: doxygen_gh.yml
cmake/: CompilerSettings.cmake  TestMacros.cmake  UseGoogleTestInstallation.cmake
d0/d03/: structBTS5001xHwConfig__t.html  structBTS5001xHwConfig__t.js
d0/d06/: classHss__coll__graph.map  classHss__coll__graph.md5
d0/d1a/: classBts5001xShieldIno__inherit__graph.map  classBts5001xShieldIno__inherit__graph.md5
d0/d25/: classhss_1_1ADCPAL__inherit__graph.map  classhss_1_1ADCPAL__inherit__graph.md5
d0/d65/: classGPIOIno-members.html
d0/d8f/: classBtt60xxShieldIno__inherit__graph.map  classBtt60xxShieldIno__inherit__graph.md5
d0/d91/: hss-pal-adc-ino_8hpp.html  hss-pal-adc-ino_8hpp_source.html
d0/d99/: classhss_1_1ADCPAL-members.html
d0/db2/: classBts5001xShield.html  classBts5001xShield.js  classBts5001xShield_a4b551120f3f6a0ce164d2ae6b3996b04_cgraph.map  classBts5001xShield_a4b551120f3f6a0ce164d2ae6b3996b04_cgraph.md5  classBts5001xShield_a4c5030dfa6ab99567c15b2dd29a94c03_cgraph.map  classBts5001xShield_a4c5030dfa6ab99567c15b2dd29a94c03_cgraph.md5  classBts5001xShield_a4dcc2b688ac23c7f31be818f0999ef39_cgraph.map  classBts5001xShield_a4dcc2b688ac23c7f31be818f0999ef39_cgraph.md5  classBts5001xShield_a5048717a7fbd772ced75f180896960fd_cgraph.map  classBts5001xShield_a5048717a7fbd772ced75f180896960fd_cgraph.md5  classBts5001xShield_a56ea9fdd83f0fc333566ec8e7b78b6ee_cgraph.map  classBts5001xShield_a56ea9fdd83f0fc333566ec8e7b78b6ee_cgraph.md5  classBts5001xShield_a68784075302f447e72d5f09a4cabf562_cgraph.map  classBts5001xShield_a68784075302f447e72d5f09a4cabf562_cgraph.md5  classBts5001xShield_aa3991b7ef99973d827351377f23fe008_cgraph.map  classBts5001xShield_aa3991b7ef99973d827351377f23fe008_cgraph.md5  classBts5001xShield_aef8ed0d3ce13ea9594bc3b07b5875882_cgraph.map  classBts5001xShield_aef8ed0d3ce13ea9594bc3b07b5875882_cgraph.md5
d0/dc3/: group__hssConfig.html  group__hssConfig.js
d0/dcc/: hss-shield-btt60xx-ino_8cpp.html
d0/def/: classBts5001xShieldIno__coll__graph.map  classBts5001xShieldIno__coll__graph.md5
d1/d0a/: group__arduinoPal.html  group__arduinoPal.js  group__arduinoPal.map  group__arduinoPal.md5
d1/d2a/: hss-shield-bts700x-ino_8hpp.html  hss-shield-bts700x-ino_8hpp_source.html
d1/d70/: hss-shield-bts700x-ino_8cpp.html
d1/d93/: classhss_1_1TimerPAL-members.html
d1/da7/: classExponentialFilter.html  classExponentialFilter.js  classExponentialFilter_a7265992d26f2b459b0ab746432552c12_cgraph.map  classExponentialFilter_a7265992d26f2b459b0ab746432552c12_cgraph.md5  classExponentialFilter_a9baeac73a8e29deeca8cc8037ab37eeb_cgraph.map  classExponentialFilter_a9baeac73a8e29deeca8cc8037ab37eeb_cgraph.md5  classExponentialFilter_acfa8f9f300c8f1852a3fa1b76a29c08a_cgraph.map  classExponentialFilter_acfa8f9f300c8f1852a3fa1b76a29c08a_cgraph.md5
d2/d47/: structBtxVariants__t.html  structBtxVariants__t.js
d2/d52/: hss-shield-bts5001x_8cpp.html
d2/d66/: classADCIno__coll__graph.map  classADCIno__coll__graph.md5
d2/d98/: hss-pal-gpio-ino_8hpp.html  hss-pal-gpio-ino_8hpp_source.html
d2/ddc/: hss-pal-adc-ino_8cpp.html
d2/ddd/: classTimerIno-members.html
d2/df8/: group__defs_8dox.html
d3/d21/: classExponentialFilter-members.html
d3/d40/: hss-shield-bts5001x_8hpp.html  hss-shield-bts5001x_8hpp_source.html
d3/d49/: structBts700xHwConfig__t-members.html
d3/d5f/: structBts700xHwConfig__t.html  structBts700xHwConfig__t.js
d3/d8b/: hss_8cpp.html
d3/d98/: classBts5001xShield__inherit__graph.map  classBts5001xShield__inherit__graph.md5
d3/dbe/: group__frameworkArduino.html  group__frameworkArduino.js  group__frameworkArduino.map  group__frameworkArduino.md5
d4/d61/: hss-pal-adc_8hpp.html  hss-pal-adc_8hpp_source.html
d4/da1/: hss-shield-btt60xx_8cpp.html
d4/db9/: classBtt60xxShieldIno-members.html
d5/d04/: classProfet24VBTTShieldIno.html  classProfet24VBTTShieldIno.js
d5/d0d/: hss-shield_8hpp.html  hss-shield_8hpp_source.html
d5/d1d/: hss-filter_8cpp.html
d5/d50/: classBts5001xShieldIno.html  (+3 more)
docs/: api-docs-index.rst  conf.py  hardware-platforms.rst  hw-platforms.rst  index.rst  links.rst  requirements.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+50 more)
src/: hss-arduino.cpp  hss-arduino.h  hss-arduino.hpp  hss-board-arduino.cpp  hss-board-arduino.h  hss-board-arduino.hpp  hss-ino.h  main.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_high-side-switch.cpp
test/unit/: CMakeLists.txt  test_hss-bts700xShield.cpp  test_hss-mock.hpp  test_hss-shield-bts5001x.cpp  test_hss-shield-bts500xx.cpp  test_hss-shield-bts700x.cpp  test_hss-shield-btt60xx.cpp  test_hss-shield-profet24v.cpp  test_hss.cpp  test_library.cpp
(+585 files in other folders)
